--- a/services/site/src/main/resources/templates/index.html
+++ b/services/site/src/main/resources/templates/index.html
@@ -64,7 +64,10 @@
                                         <i class="far fa-clock"></i>
                                         <span th:text="${#strings.substring(interview.createDate, 0, 10)}"></span>
                                         <i class="far fa-user"></i>
-                                        <span>ФИО пользователя</span>
+                                        <span th:each="profile: ${profiles}">
+                                        <span th:if="${profile.id == interview.submitterId}"/>
+                                            <span th:text="${profile.username}"/>
+                                        </span>
                                     </span>
                                 </div>
                             </td>
