--- a/services/site/src/main/resources/templates/index.html
+++ b/services/site/src/main/resources/templates/index.html
@@ -108,7 +108,7 @@
                                 </small>
                             </td>
                             <td>
-                                <span class="badge bg-success" th:text="${category.value}"></span>
+                                <span class="badge bg-success" th:text="${category.value}"/>
                             </td>
                         </tr>
                         </tbody>
